--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <html>
-
+<head>
+<style>
+html,body{margin:0;height:100%;}
+.grid{display:grid;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;height:100vh;width:100vw;}
+.cell{border:1px solid #f0f0f0;position:relative;}
+.cell.filled{display:flex;justify-content:center;align-items:center;}
+.widget-frame{width:80px;height:80px;border-radius:50%;background-color:#0a58ea;box-shadow:0 4px 8px rgba(0,0,0,0.2);border:none;}
+</style>
+</head>
 <body>
-<script async src="https://autorag.ensai.io/widget.js" data-site-id="077e5fb2c38f9a63"></script>
+<div class="grid">
+<div class="cell filled">
+<iframe class="widget-frame" srcdoc="<script async src=&quot;https://autorag.ensai.io/widget.js&quot; data-site-id=&quot;077e5fb2c38f9a63&quot;></script>"></iframe>
+</div>
+<div class="cell"></div>
+<div class="cell"></div>
+<div class="cell"></div>
+</div>
 </body>
-
 </html>
