--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 html,body{margin:0;height:100%;}
 .grid{display:grid;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;height:100vh;width:100vw;}
 .cell{border:1px solid #f0f0f0;position:relative;}
-.cell.filled{display:flex;flex-direction:column;align-items:center;justify-content:center;}
-.widget-frame{width:80px;height:80px;border-radius:50%;background-color:#0a58ea;box-shadow:0 4px 8px rgba(0,0,0,0.2);border:none;}
-.label{margin-top:8px;font-size:12px;color:#333;text-align:center;}
+.cell.filled{position:relative;}
+.site-preview{width:100%;height:100%;border:none;}
+.widget-container{position:absolute;bottom:10px;right:10px;width:80px;height:80px;border-radius:50%;background-color:#0a58ea;box-shadow:0 4px 8px rgba(0,0,0,0.2);border:none;}
 </style>
 </head>
 <body>
 <div class="grid">
 <div class="cell filled">
-<iframe class="widget-frame" srcdoc="<script async src=&quot;https://autorag.ensai.io/widget.js&quot; data-site-id=&quot;077e5fb2c38f9a63&quot;></script>"></iframe>
-<div class="label">Пример по RightHands</div>
+<iframe class="site-preview" src="https://righthands.de"></iframe>
+<iframe class="widget-container" srcdoc="<script async src=&quot;https://autorag.ensai.io/widget.js&quot; data-site-id=&quot;077e5fb2c38f9a63&quot;></script>"></iframe>
 </div>
 <div class="cell"></div>
 <div class="cell"></div>
