Add overflow scrollbars

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-html,body{margin:0;height:100%;}
+html,body{margin:0;height:100%;overflow:auto;}
 .grid{display:grid;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;height:100vh;width:100vw;}
 .cell{border:1px solid #f0f0f0;position:relative;}
 .cell.filled{position:relative;}
@@ -11,13 +11,13 @@ html,body{margin:0;height:100%;}
 </head>
 <body>
 <div class="grid">
-<div class="cell filled">
-<img class="site-image" src="righthandsde.png" alt="RightHands Example">
-<iframe class="widget-container" srcdoc="&lt;script async src=&quot;https://autorag.ensai.io/widget.js&quot; data-site-id=&quot;077e5fb2c38f9a63&quot;&gt;&lt;/script&gt;"></iframe>
-</div>
-<div class="cell"></div>
-<div class="cell"></div>
-<div class="cell"></div>
+  <div class="cell filled">
+    <img class="site-image" src="righthandsde.png" alt="RightHands Example">
+    <iframe class="widget-container" srcdoc="&lt;script async src=&quot;https://autorag.ensai.io/widget.js&quot; data-site-id=&quot;077e5fb2c38f9a63&quot;&gt;&lt;/script&gt;"></iframe>
+  </div>
+  <div class="cell"></div>
+  <div class="cell"></div>
+  <div class="cell"></div>
 </div>
 </body>
 </html>
