Simplify layout to single image and widget script

--- a/index.html
+++ b/index.html
@@ -1,23 +1,12 @@
 <html>
 <head>
 <style>
-html,body{margin:0;height:100%;overflow:auto;}
-.grid{display:grid;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;height:100vh;width:100vw;}
-.cell{border:1px solid #f0f0f0;position:relative;}
-.cell.filled{position:relative;}
-.site-image{width:100%;height:100%;object-fit:cover;}
-.widget-container{position:absolute;bottom:10px;right:10px;width:80px;height:80px;border:none;}
+html, body { margin: 0; padding: 0; overflow: auto; }
+img { width: 100%; display: block; }
 </style>
 </head>
 <body>
-<div class="grid">
-  <div class="cell filled">
-    <img class="site-image" src="righthandsde.png" alt="RightHands Example">
-    <iframe class="widget-container" srcdoc="&lt;script async src=&quot;https://autorag.ensai.io/widget.js&quot; data-site-id=&quot;077e5fb2c38f9a63&quot;&gt;&lt;/script&gt;"></iframe>
-  </div>
-  <div class="cell"></div>
-  <div class="cell"></div>
-  <div class="cell"></div>
-</div>
+<img src="righthandsde.png" alt="RightHands Example">
+<script async src="https://autorag.ensai.io/widget.js" data-site-id="077e5fb2c38f9a63"></script>
 </body>
 </html>
